sfSandBoxCode/force-app/main/default/objects/BSF_Waste_Conversion__c/BSF_Waste_Conversion__c.object-meta.xml
<CustomObject>
    <label>BSF Waste Conversion</label>
    <nameField>
        <label>Waste Conversion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BSF Waste Conversion</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>