sfSandBoxCode/force-app/main/default/objects/BSF_Waste_Conversion__c/fields/Input_date__c.field-meta.xml
<CustomField>
    <fullName>Input_date__c</fullName>
    <label>Input date</label>
    <type>Date</type>
</CustomField>