sfSandBoxCode/force-app/main/default/objects/BSF_Waste_Conversion__c/fields/Mature_Larvae_Kg__c.field-meta.xml
<CustomField>
    <fullName>Mature_Larvae_Kg__c</fullName>
    <label>Mature Larvae (Kg)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>