sfSandBoxCode/force-app/main/default/objects/BSF_Waste_Conversion__c/fields/Substrate_by_type__c.field-meta.xml
<CustomField>
    <fullName>Substrate_by_type__c</fullName>
    <label>Substrate (by type)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Potatoes</fullName>
            </value>
            <value>
                <fullName>Market Waste</fullName>
            </value>
            <value>
                <fullName>Carrots</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>