sfSandBoxCode/force-app/main/default/objects/BSF_Waste_Conversion__c/fields/Substrate_Kg__c.field-meta.xml
<CustomField>
    <fullName>Substrate_Kg__c</fullName>
    <label>Substrate (Kg)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>