sfSandBoxCode/force-app/main/default/objects/BSF_Waste_Conversion__c/fields/Waste_Conversion_Residue_Kg__c.field-meta.xml
<CustomField>
    <fullName>Waste_Conversion_Residue_Kg__c</fullName>
    <label>Waste Conversion Residue (Kg)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>