sfSandBoxCode/force-app/main/default/objects/BSF_Waste_Conversion__c/recordTypes/Waste_Conversion_Input.recordType-meta.xml
<RecordType>
    <fullName>Waste_Conversion_Input</fullName>
    <active>true</active>
    <label>Waste Conversion Input</label>
</RecordType>