sfSandBoxCode/force-app/main/default/objects/BSF_Waste_Conversion__c/recordTypes/Waste_Conversion_Output.recordType-meta.xml
<RecordType>
    <fullName>Waste_Conversion_Output</fullName>
    <active>true</active>
    <label>Waste Conversion Output</label>
</RecordType>